# 2023_1_DeltaFlex

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  settings.ini  test.cpp
.cache/clangd/index/: DFAudioManager.hpp.84067F1A950287DD.idx  DFCollider.cpp.75F55C892F3B596E.idx  DFCollider.hpp.534C61D52577CF29.idx  DFComponent.hpp.94BFDE56ED70B1AE.idx  DFEngine.hpp.5464FB100B6DB522.idx  DFEntity.hpp.DDCE34813BC0946F.idx  DFInputSystem.hpp.EBC990CF96E7823E.idx  DFScUpdParams.hpp.2B0150620084CB8E.idx  DFScene.hpp.D480AE84B02F4688.idx  DFvec2.hpp.219352382166306B.idx  (+39 more)
.github/workflows/: cmake.yml
DFEditor/: CMakeLists.txt
DFEditor/include/: DFEAssetViewer.hpp  DFEContentManager.hpp  DFEDirectoryViewer.hpp  DFEExpandingWidget.hpp  DFEHierarchy.hpp  DFEMainWindow.hpp  DFEProjectExplorer.hpp  DFEPropertiesPanel.hpp  DFESceneInspector.hpp  DFESceneInspectorTree.hpp  DFESceneObject.hpp  DFESceneView.hpp  DFETree.hpp  DFEViewport.hpp
DFEditor/resources/: resources.qrc
DFEditor/src/: DFEAssetViewer.cpp  DFEContentManager.cpp  DFEDirectoryViewer.cpp  DFEExpandingWidget.cpp  DFEMainWindow.cpp  DFEProjectExplorer.cpp  DFEPropertiesPanel.cpp  DFESceneInspector.cpp  DFESceneInspectorTree.cpp  DFESceneView.cpp  DFETree.cpp  DFEViewport.cpp  main.cpp
DFEditor/tests/: CMakeLists.txt  test_DFEAssetViewer.cpp
DFEditor/tests/deurishhe_tests/: CMakeLists.txt
DFEditor/tests/deurishhe_tests/GUITests/: CMakeLists.txt  TestRunner.h  main.cpp
DFEditor/tests/deurishhe_tests/GUITests/tests/: test_DFESceneInspector.h  test_DFESceneInspectorTree.h
DFEditor/tests/include/: TestDFEExpandingWidget.hpp
DFEditor/tests/src/: test_DFEExpandingWidget.cpp
DFEditor/tests/yusaho_tests/: CMakeLists.txt  main.cpp
DFEditor/tests/yusaho_tests/GUITests/: CMakeLists.txt  TestRunner.h  main.cpp
DFEditor/tests/yusaho_tests/GUITests/tests/: test_DFEAssetViewer.h  test_DFEContentManager.h  test_DFEExpandingWidget.h  test_DFEMainWindow.h  test_DFEProjectExplorer.h
DFEditor/tests/yusaho_tests/GoogleTests/: CMakeLists.txt
DFEditor/tests/yusaho_tests/GoogleTests/src/: test_DFESceneExporter.cpp
DFEditor/tests/yusaho_tests/tests/: test_DFESceneExporter.h
DFEditor/ui/: DFEMainWindow.ui
EditorQt/DFEditor/: CMakeLists.txt  dfemainwindow.cpp  dfemainwindow.h  dfemainwindow.ui  main.cpp
EditorQt/build-DFEditor-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
complete_models/: CommonModel1 10874.txt  CommonModel1 10937.txt  CommonModel1 110744.txt  CommonModel1 112833.txt  CommonModel1 124311.txt  CommonModel1 12750.txt  CommonModel1 133366.txt  CommonModel1 137729.txt  CommonModel1 146500.txt  CommonModel1 15556.txt  CommonModel1 16356.txt  CommonModel1 17080.txt  CommonModel1 17495.txt  CommonModel1 17998.txt  CommonModel1 19504.txt  CommonModel1 21077.txt  CommonModel1 22154.txt  CommonModel1 356833.txt  CommonModel1 553895.txt  CommonModel1 65011.txt  CommonModel1 8736.txt  CommonModel10 129997.txt  CommonModel10 13048.txt  CommonModel10 139480.txt  CommonModel10 140071.txt  CommonModel10 15293.txt  CommonModel10 16026.txt  CommonModel10 24061.txt  CommonModel10 25611.txt  CommonModel10 27778.txt  CommonModel10 4025.txt  CommonModel10 571022.txt  CommonModel10 571248.txt  CommonModel10 8860.txt  CommonModel10 93141.txt  CommonModel11 12597.txt  CommonModel11 128998.txt  CommonModel11 139604.txt  CommonModel11 144370.txt  CommonModel11 152252.txt  (+645 more)
experimental/: a.out  abober.cpp  class_parser.cpp  class_parser.py  varparser.py
game/: CMakeLists.txt
game/include/: BattleController.hpp  GameStopper.hpp  Link.hpp  PhysicsComponent.hpp  PointMass.hpp  SatCollider.hpp  StickmanCircle.hpp  StickmanQuery.hpp  UiButton.hpp
game/include/ai/: BaseModel.hpp  BattleModel.hpp  CommonModel.hpp  ControlComponents.hpp  Evolution.hpp  MatrixActions.hpp  Model.hpp  PlayerControl.hpp  StickmanStatsComponent.hpp  WalkModel.hpp
game/include/game_ui/: GameActiveSkill.hpp  GameHealthBar.hpp  GameStaminaBar.hpp  RestartGameButton.hpp  StickmanQueryButton.hpp
game/include/menu/: MainMenuBack.hpp  MainMenuButton.hpp  MainMenuButtons.hpp  MainMenuCheckBox.hpp  MainMenuSlider.hpp
game/include/options_volume/: OptionsVolumeBack.hpp  OptionsVolumeButton.hpp  OptionsVolumeControl.hpp
game/include/pause_menu/: PauseMenuBack.hpp
game/include/physics/: Link.hpp  PhysicsComponent.hpp  PointMass.hpp  StickmanCircle.hpp
game/src/: GameStopper.cpp  Link.cpp  PointMass.cpp
game/src/ai/: BaseModel.cpp  BattleModel.cpp  CommonModel.cpp  ControlComponents.cpp  Evolution.cpp  MatrixActions.cpp  Model.cpp  PlayerControl.cpp  StickmanStatsComponent.cpp  WalkModel.cpp
game/src/game_ui/: GameActiveSkill.cpp  GameHealthBar.cpp  GameStaminaBar.cpp
game/src/menu/: MainMenuButton.cpp  MainMenuCheckBox.cpp  MainMenuSlider.cpp
game/src/physics/: Link.cpp  PhysicsComponent.cpp  PointMass.cpp  StickmanCircle.cpp
game/tests/: CMakeLists.txt
game/tests/src/: test_Evolution.cpp  test_Link.cpp  test_Model.cpp  test_PhysicsComponent.cpp  test_PointMass.cpp  test_StickmanCircle.cpp
game_base_models/: attack.txt  idle.txt
libs/comploaders/: CMakeLists.txt
libs/deltacore/: CMakeLists.txt
libs/deltacore/include/: DFAudioManager.hpp  DFCamera.hpp  DFCollider.hpp  DFComponent.hpp  DFEngine.hpp  DFEntity.hpp  DFIniParser.hpp  DFInputSystem.hpp  DFLinearAllocator.hpp  DFLoadingScene.hpp  DFPosition.hpp  DFRenderSystem.hpp  DFScUpdParams.hpp  DFScene.hpp  DFSceneManager.hpp  DFSprite.hpp  DFTexture.hpp  DFTransform.hpp  DFVideoParams.hpp  DFWorldScene.hpp  DFvec2.hpp
libs/deltacore/src/: DFCollider.cpp  DFComponent.cpp  DFEngine.cpp  DFInputSystem.cpp  DFLoadingScene.cpp  DFPosition.cpp  DFRenderSystem.cpp  DFSceneManager.cpp  DFSprite.cpp
libs/deltacore/tests/: CMakeLists.txt
libs/deltacore/tests/src/: test_DFEntity.cpp  test_DFVec2.cpp  test_DFWorldScene.cpp
libs/scloader/: CMakeLists.txt
mentis_bellum/: settings.ini
mentis_bellum/scenes/: test.scene
scripts/: install-dependencies.sh
stickman_prototype/: main.py  physics.py  point.py  pointmass.py  stickman.py  test.py
(+280 files in other folders)
